Mudança no Lyout
Fiz alguma pequenas atualização no layout Na aba projetos

--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -29,7 +29,10 @@
     </header>
     <main>
       <section class="sobre">
-        <img src="/Imagens/perfil.jpg" alt="Imagem do altor da pagina" />
+        <img
+          src="/Portifolio/Imagens/perfil.jpg"
+          alt="Imagem do altor da pagina"
+        />
 
         <section class="sobre-min">
           <h1>Edison Developer</h1>
@@ -49,14 +52,14 @@
 
         <div class="portifolio-img">
           <a href="/../landpage/index.html"
-            ><img src="/Imagens/Ballebot/Ballebot.PNG" alt=""
+            ><img src="/Portifolio/Imagens/Ballebot/Ballebot.PNG" alt=""
           /></a>
         </div>
         <div class="portifolio-img">
-          <img src="" alt="" />
+          <img src="/Portifolio/Imagens/Ballebot/Ballebot.PNG" alt="" />
         </div>
         <div class="portifolio-img">
-          <img src="" alt="" />
+          <img src="/Portifolio/Imagens/Ballebot/Ballebot.PNG" alt="" />
         </div>
       </section>
     </main>
