--- a/betas-pedacos-de-codigo/loginpag/index.html
+++ b/betas-pedacos-de-codigo/loginpag/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--link de estilos-->
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/betas-pedacos-de-codigo/loginpag/style.css"
+    />
 
     <link type="stylesheet" src="style.css" />
     <!--google fonts-->
@@ -17,7 +21,7 @@
     />
     <title>Login</title>
   </head>
-  <body>
+  <body class="body">
     <header>
       <section class="cabecalho">
         <nav class="menu-nav">
@@ -31,8 +35,10 @@
     </header>
     <main class="llogin">
       <section class="llogin-menu">
-        <div class="llogin-name"><form action="">Nome</form></div>
-        <div class="llogin-senha"><form action="">Senha</form></div>
+        <div class="llogin-name"><input type="text" placeholder="Nome" /></div>
+        <div class="llogin-senha">
+          <input type="password" placeholder="Senha" />
+        </div>
         <div class="llogin-enviar"><button>Enviar</button></div>
       </section>
     </main>
