--- a/betas-pedacos-de-codigo/loginpag/index.html
+++ b/betas-pedacos-de-codigo/loginpag/index.html
@@ -24,23 +24,28 @@
   <body class="body">
     <header>
       <section class="cabecalho">
-        <nav class="menu-nav">
-          <div class="">
+        <nav class="">
+          <div>
             <a class="" href="#">Portifolio</a>
-            <a class="" href="#">Home</a>
-            <a class="" href="#">Sobre Min</a>
+          </div>
+            <div>
+              <a class="" href="#">Home</a>
+            </div>
+            <div>
+              <a class="" href="#">Sobre Min</a>
+            </div>
           </div>
         </nav>
       </section>
     </header>
     <main class="llogin">
-      <section class="llogin-menu">
+      <!--<section class="llogin-menu">
         <div class="llogin-name"><input type="text" placeholder="Nome" /></div>
         <div class="llogin-senha">
           <input type="password" placeholder="Senha" />
         </div>
         <div class="llogin-enviar"><button>Enviar</button></div>
-      </section>
+      </section>-->
     </main>
     <footer></footer>
   </body>
