--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -19,50 +19,56 @@
   </head>
   <body>
     <header class="menu">
-      <nav class="menu-nav">
+      <nav class="menu">
         <div class="">
-          <a class="" href="#">Portifolio</a>
-          <a class="" href="#">Home</a>
+          <a class="" href="#" id="Portifolio">Portifolio</a>
+          <a class="" href="#" id="Sobre">Home</a>
           <a class="" href="#">Sobre Min</a>
         </div>
       </nav>
     </header>
-    <main>
-      <section class="sobre">
-        <img
-          src="/Portifolio/Imagens/perfil.jpg"
-          alt="Imagem do altor da pagina"
-        />
+    <main id="Sobre" class="sobre">
+      <section>
+        <div>
+          <img
+            src="/Portifolio/Imagens/perfil.jpg"
+            alt="Imagem do altor da pagina"
+          />
+        </div>
 
-        <section class="sobre-min">
+        <div>
           <h1>Edison Developer</h1>
+        </div>
+        <div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
             quaerat possimus aspernatur obcaecati? Modi aliquid quas unde. In
             veniam a delectus deleniti repellat mollitia quisquam minus
             voluptatibus corrupti, impedit fuga?
           </p>
-        </section>
-      </section>
-
-      <section class="portifolio">
-        <div class="portifolio-texth2">
-          <h2>Protifolios</h2>
         </div>
+      </section>
+    </main>
 
-        <div class="portifolio-img">
+    <section id="Portifolio">
+      <div class="portifolio-text">
+        <h2>Portifolios</h2>
+      </div>
+      <div class="portifolio">
+        <div class="">
           <a href="/../landpage/index.html"
             ><img src="/Portifolio/Imagens/Ballebot/Ballebot.PNG" alt=""
           /></a>
         </div>
-        <div class="portifolio-img">
+        <div class="">
           <img src="/Portifolio/Imagens/Ballebot/Ballebot.PNG" alt="" />
         </div>
-        <div class="portifolio-img">
+        <div class="">
           <img src="/Portifolio/Imagens/Ballebot/Ballebot.PNG" alt="" />
         </div>
-      </section>
-    </main>
+      </div>
+    </section>
+
     <footer>
       <section id="contato" class="container">
         <a href="">Whatsapp</a>
