--- a/beautysalon/index.html
+++ b/beautysalon/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>beautysalon.</title>
-    <link rel="stylesheet" src="style.css" href="/style.css" />
+    <link rel="stylesheet" src="style.css" href="/beautysalon/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
