--- a/betas-pedacos-de-codigo/loginpag/index.html
+++ b/betas-pedacos-de-codigo/loginpag/index.html
@@ -1,52 +1,36 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--link de estilos-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/betas-pedacos-de-codigo/loginpag/style.css"
-    />
-
-    <link type="stylesheet" src="style.css" />
-    <!--google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&family=The+Nautigal:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="/betas-pedacos-de-codigo/loginpag/style.css" />
     <title>Login</title>
   </head>
-  <body class="body">
-    <header>
-      <section class="cabecalho">
-        <nav class="">
-          <div>
-            <a class="" href="#">Portifolio</a>
-          </div>
-            <div>
-              <a class="" href="#">Home</a>
-            </div>
-            <div>
-              <a class="" href="#">Sobre Min</a>
-            </div>
-          </div>
-        </nav>
-      </section>
-    </header>
+  <body>
+    <header></header>
+
     <main class="llogin">
-      <!--<section class="llogin-menu">
-        <div class="llogin-name"><input type="text" placeholder="Nome" /></div>
-        <div class="llogin-senha">
+      <form action="llogin-">
+        <div class="input-field">
+          <input type="text" placeholder="Nome" />
+        </div>
+        <div class="input-field">
           <input type="password" placeholder="Senha" />
         </div>
-        <div class="llogin-enviar"><button>Enviar</button></div>
-      </section>-->
+        <div class="input-field">
+          <button>Enviar</button>
+        </div>
+      </form>
     </main>
-    <footer></footer>
+
+    <footer class="social">
+      <div class="class">
+        <a href="">Facebook</a>
+      </div>
+      <div class="class">
+        <a href="Twiter"></a>
+      </div>
+    </footer>
   </body>
 </html>
