Inicio Projeto Pets life
Iniciei o Projeto Pets life montando o escopo do projeto estruturando e adicionando o html basico

--- a/pets-life/index.html
+++ b/pets-life/index.html
@@ -5,26 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pets Life</title>
-    <link rel="stylesheet" href="/style.css" src="style.css" />
+    <link rel="stylesheet" href="style.css" src="style.css" />
   </head>
   <body>
     <section class="menu">
       <nav class="menu">
-        <div class="logo"></div>
-        <div class="infomenu">
-          <div class="dropdown">
-            <div class="dropdown-child">
-              <a href="#" id="taghome">Home</a>
-              <a href="#" id="tagcontatos">Contatos</a>
-              <a href="#" id="tagsobrenos">Sobre nos </a>
-            </div>
-          </div>
+        <div class="logo">Logo</div>
+        <div class="">
+          <a href="#" id="taghome">Home</a>
+          <a href="#" id="tagcontatos">Contatos</a>
+          <a href="#" id="tagsobrenos">Sobre nos </a>
         </div>
       </nav>
     </section>
-    <section id="taghome"></section>
-    <section></section>
-    <section></section>
-    <section></section>
+    <header class="conteudo">
+      <div>
+        <div><h1>Pets life</h1></div>
+        <div><h3>#ADOTE UM PET</h3></div>
+        <div>
+          <h4>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+            maiores, fugiat delectus temporibus deleniti unde voluptas itaque,
+            eveniet consectetur reiciendis dolorum excepturi autem nesciunt
+            repudiandae vero harum ratione alias nisi!
+          </h4>
+        </div>
+      </div>
+      <div>
+        <img
+          src="Baner/guy-walking-with-dog-in-the-park 1.png"
+          alt="Pessoa andando com se cachorro"
+        />
+      </div>
+      <div>
+        <button><a href="">Saiba mais</a></button>
+        <button><a href="">Contacte-nos</a></button>
+      </div>
+    </header>
   </body>
 </html>
