--- a/pets-life/index.html
+++ b/pets-life/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="style.css" src="style.css" />
   </head>
   <body>
-    <section class="menu">
-      <nav class="menu">
-        <div class="logo">Logo</div>
-        <div class="">
-          <a href="#" id="taghome">Home</a>
-          <a href="#" id="tagcontatos">Contatos</a>
-          <a href="#" id="tagsobrenos">Sobre nos </a>
-        </div>
-      </nav>
-    </section>
+    <nav class="menu">
+      <div class="logotxt">Logo</div>
+      <div class="menu-btm">
+        <a href="#" id="taghome">Home</a>
+        <a href="#" id="tagcontatos">Contatos</a>
+        <a href="#" id="tagsobrenos">Sobre nos </a>
+      </div>
+      <div>
+        <img src="/pets-life/Menu/Vector.png" alt="Vetor Imagem do user" />
+      </div>
+    </nav>
     <header class="conteudo">
       <div>
         <div><h1>Pets life</h1></div>
@@ -32,14 +33,14 @@
         </div>
       </div>
       <div>
+        <button><a href="">Saiba mais</a></button>
+        <button><a href="">Contacte-nos</a></button>
+      </div>
+      <div>
         <img
           src="Baner/guy-walking-with-dog-in-the-park 1.png"
           alt="Pessoa andando com se cachorro"
         />
-      </div>
-      <div>
-        <button><a href="">Saiba mais</a></button>
-        <button><a href="">Contacte-nos</a></button>
       </div>
     </header>
   </body>
