--- a/pets-life/index.html
+++ b/pets-life/index.html
@@ -20,7 +20,7 @@
       </div>
     </nav>
     <header class="conteudo">
-      <div>
+      <div class="conteudo-text">
         <div><h1>Pets life</h1></div>
         <div><h3>#ADOTE UM PET</h3></div>
         <div>
@@ -31,11 +31,12 @@
             repudiandae vero harum ratione alias nisi!
           </h4>
         </div>
+        <div>
+          <button><a href="">Saiba mais</a></button>
+          <button><a href="">Contacte-nos</a></button>
+        </div>
       </div>
-      <div>
-        <button><a href="">Saiba mais</a></button>
-        <button><a href="">Contacte-nos</a></button>
-      </div>
+
       <div>
         <img
           src="Baner/guy-walking-with-dog-in-the-park 1.png"
