--- a/pets-life/index.html
+++ b/pets-life/index.html
@@ -31,7 +31,7 @@
             repudiandae vero harum ratione alias nisi!
           </h4>
         </div>
-        <div>
+        <div class="conteuso-button">
           <button><a href="">Saiba mais</a></button>
           <button><a href="">Contacte-nos</a></button>
         </div>
