Aulas e exercicios de js
aprendendo primeiros comandos e variaveis

--- a/pets-life/index.html
+++ b/pets-life/index.html
@@ -19,30 +19,32 @@
         <img src="/pets-life/Menu/Vector.png" alt="Vetor Imagem do user" />
       </div>
     </nav>
-    <header class="conteudo">
-      <div class="conteudo-text">
-        <div><h1>Pets life</h1></div>
-        <div><h3>#ADOTE UM PET</h3></div>
-        <div>
-          <h4>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
-            maiores, fugiat delectus temporibus deleniti unde voluptas itaque,
-            eveniet consectetur reiciendis dolorum excepturi autem nesciunt
-            repudiandae vero harum ratione alias nisi!
-          </h4>
+    <header id="header">
+      <section class="conteudo">
+        <div class="conteudo-text">
+          <div><h1>Pets life</h1></div>
+          <div><h3>#ADOTE UM PET</h3></div>
+          <div>
+            <h4>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+              maiores, fugiat delectus temporibus deleniti unde voluptas itaque,
+              eveniet consectetur reiciendis dolorum excepturi autem nesciunt
+              repudiandae vero harum ratione alias nisi!
+            </h4>
+          </div>
+          <div class="conteuso-button">
+            <button><a href="">Saiba mais</a></button>
+            <button><a href="">Contacte-nos</a></button>
+          </div>
         </div>
-        <div class="conteuso-button">
-          <button><a href="">Saiba mais</a></button>
-          <button><a href="">Contacte-nos</a></button>
-        </div>
-      </div>
 
-      <div>
-        <img
-          src="Baner/guy-walking-with-dog-in-the-park 1.png"
-          alt="Pessoa andando com se cachorro"
-        />
-      </div>
+        <div>
+          <img
+            src="Baner/guy-walking-with-dog-in-the-park 1.png"
+            alt="Pessoa andando com se cachorro"
+          />
+        </div>
+      </section>
     </header>
   </body>
 </html>
