--- a/betas-pedacos-de-codigo/pLogin/index.html
+++ b/betas-pedacos-de-codigo/pLogin/index.html
@@ -4,25 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/interface/pLogin/pLogin.css"
-    />
+    <link rel="stylesheet" type="text/css" href="pLogin.css" />
 
     <title>Login</title>
   </head>
   <body>
     <!-- estrutura basica de login   -->
-    <nav class="menu">
-      <div class="">
-        <img src="/interface/logo.png" alt="logo" />
-        <h1>The Bank</h1>
-      </div>
-    </nav>
+
     <div class="main-login">
       <div class="left-login">
-        <h1>Faça login<br />No Maior banco que exite</h1>
+        <h1>Faça login<br />No melhor site de compras do mundo</h1>
       </div>
       <div class="right-login">
         <h1>LOGIN</h1>
@@ -36,13 +27,13 @@
             <input type="password" name="usuario" placeholder="senha" />
           </div>
 
-          <div class="btn-login btn-login1">
-            <a link href="/interface/pLogin2/index.html">
-              <button>Logar</button></a
+          <div class="btn-login">
+            <a link href="/betas-pedacos-de-codigo/pLogin/index.html">
+              <button id="btn-cadastre-se">Logar</button></a
             >
-          </div>
-          <div class="btn-login btn-login2">
-            <a link href="#"> <button>Cadastre-se</button></a>
+            <a link href="/betas-pedacos-de-codigo/pCadastro/index.html">
+              <button id="btn-login">Cadastre-se</button></a
+            >
           </div>
         </div>
       </div>
