--- a/interface/index.html
+++ b/interface/index.html
@@ -12,23 +12,19 @@
     <section class="fundo">
       <nav class="menu">
         <div class="menu-logo">
-          <img src="png.png" alt="logo" />
+          <img src="logo.png" alt="logo" />
           <h1>The Bank</h1>
         </div>
       </nav>
       <main class="prin">
         <div class="principal">
           <div class="button button1">
-            <a link href="/betas-pedacos-de-codigo/pLogin/index.html">
-              <button id="btn-cadastre-se">
-                <strong>Abrir </strong> Conta
-              </button>
-            </a>
+            <a link href="/interface/pLogin/index.html">
+              <button>Logar</button></a
+            >
           </div>
           <div class="button button2">
-            <a link href="/betas-pedacos-de-codigo/pLogin/index.html">
-              <button id="btn-cadastre-se">Ja Tenho Conta</button></a
-            >
+            <a link href="#"> <button>Ja Tenho Conta</button></a>
           </div>
         </div>
       </main>
