--- a/interface/pLogin2/index.html
+++ b/interface/pLogin2/index.html
@@ -7,7 +7,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/interface/pLogin/pLogin.css"
+      href="/interface/pLogin2/pLogin2user.css"
     />
 
     <title>Login</title>
@@ -22,14 +22,21 @@
     </nav>
     <div class="main-login">
       <div class="left-login">
-        <h1>Faça login<br />No Maior banco que exite</h1>
+        <div class="usuario">
+          <img src="/Portifolio/Imagens/perfil.jpg" alt="" />
+        </div>
+        <h1>
+          Ola <strong>Edison Junior</strong><br />Faça login e aproveite os
+          beneficios
+        </h1>
       </div>
       <div class="right-login">
         <h1>LOGIN</h1>
+
         <div class="card-login">
           <div class="textfild">
-            <label for="usuario">Usuario</label>
-            <input type="text" name="usuario" placeholder="senha" />
+            <label for="usuario">Leticia</label>
+            <input type="text" name="CPF" placeholder="455-663-676-23" />
           </div>
           <div class="textfild">
             <label for="usuario">Senha</label>
@@ -37,12 +44,12 @@
           </div>
 
           <div class="btn-login btn-login1">
-            <a link href="/interface/pLogin2/index.html">
-              <button>Logar</button></a
-            >
+            <a link href="#"> <button>Acessar</button></a>
           </div>
           <div class="btn-login btn-login2">
-            <a link href="#"> <button>Cadastre-se</button></a>
+            <a link href="/interface/pCadastro/index.html">
+              <button>Acessar outra conta</button></a
+            >
           </div>
         </div>
       </div>
