--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -42,9 +42,8 @@
         <div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-            quaerat possimus aspernatur obcaecati? Modi aliquid quas unde. In
-            veniam a delectus deleniti repellat mollitia quisquam minus
-            voluptatibus corrupti, impedit fuga?
+            quaerat possimus asModi aliquid quas unde. In veniam a delectus
+            deleniti minus voluptatibus corrupti, impedit fuga?
           </p>
         </div>
       </section>
